fixed spacing

--- a/styles.css
+++ b/styles.css
@@ -38,7 +38,7 @@
     max-width: 100%;
     height: auto;
     text-align: center;
-    padding:15px;
+    padding: 15px;
     grid-area: image;
 }
 
@@ -65,7 +65,7 @@ a:hover {
 /* Development */
 .development{
     grid-area: dev;
-    padding: 0px 17px 30px 17px;
+    padding: 0px 20px 30px 20px;
 }
 .development h2{
     color:lightskyblue;
@@ -75,20 +75,20 @@ a:hover {
 /* Skills */
 .skills{
     grid-area: skills;
-    padding: 0px 15px 80px 15px;
+    padding: 0px 20px 80px 20px;
 }
 .skills h2{
     color: lightskyblue;
     padding-bottom: 5px;
+    
 }
 .skills table{
     border-collapse: collapse;
-    width: 100%;
+    width: 75%;
 }
 .skills table td{
     text-align: left;
     padding: 2px;
-    
 }
 tr:nth-child(even) {background-color: lightskyblue;}
 
